--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "webpack": "^3.8.1"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "react": "^16.1.1",
-    "react-dom": "^16.1.1"
+    "react-dom": "^16.1.1",
+    "react-fetch": "0.0.9"
   }
 }
